--- a/src/main/html/five-in-a-row-hex-rects.html
+++ b/src/main/html/five-in-a-row-hex-rects.html
@@ -84,7 +84,7 @@ Promise.resolve({})
 	let viewCell = rd.parse(`
 		<span draggable='true'
 			style='
-				background: { vm.selected ? palette[2] : "#DDDDDD" };
+				background: { vm.selected ? env.palette[2] : "#DDDDDD" };
 				display: inline-block;
 				filter___: { vm.selected ? "brightness(80%)" : "brightness(100%)" };
 				font-size: 25px;
@@ -95,16 +95,16 @@ Promise.resolve({})
 				width: 40px;'
 			rd_on_click='handleclick(vm, ev)'>
 			<rd_map v='vm.d'>
-				<rd_if v='vm != null'>{ icons[vm] }</rd_if>
+				<rd_if v='vm != null'>{ env.icons[vm] }</rd_if>
 			</rd_map>
 		</span>
-	`, {});
+	`, { ...fiveinarow, });
 
 	let viewCells = rd.parse(`
 		<rd_for>
 			<rd_component v='env.viewCell' />
 		</rd_for>
-	`, { viewCell, });
+	`, { ...fiveinarow, viewCell, });
 
 	let view = rd.parse(`
 		<span style='display: flex; flex-direction: column;'>
@@ -114,7 +114,7 @@ Promise.resolve({})
 						<rd_component v='env.viewCells' />
 					</rd_map>
 				</span>
-				<span style='color: { palette[4] }; font-family: Oswald, monospace; margin-right: 16px;'>{ vm.score }</span>
+				<span style='color: { env.palette[4] }; font-family: Oswald, monospace; margin-right: 16px;'>{ vm.score }</span>
 			</span>
 			<p/>
 			<rd_map v='vm.board'>
@@ -137,21 +137,19 @@ Promise.resolve({})
 			</rd_map>
 			<!-- button rd_on_click='handleclose()'>close</button -->
 			<rd_map v='vm.notification'>
-				<div style='background: { palette[vm.c] }; bottom: 0; font-family: Oswald, monospace; left: 0; position: fixed; text-align: center; width: 100%;'>
+				<div style='background: { env.palette[vm.c] }; bottom: 0; font-family: Oswald, monospace; left: 0; position: fixed; text-align: center; width: 100%;'>
 					<p>{ vm.message }</p>
 				</div>
 			</rd_map>
 		</span>
-	`, { viewCells, });
+	`, { ...fiveinarow, viewCells, });
 
-	let five = fiveinarow(cc, view);
+	let game = fiveinarow.game(cc, view);
 
-	globalThis.handleclick = five.handleclick;
-	globalThis.handleclose = five.handleclose;
-	globalThis.icons = five.icons;
-	globalThis.palette = five.palette;
+	globalThis.handleclick = game.handleclick;
+	globalThis.handleclose = game.handleclose;
 
-	five.vw.init();
+	game.vw.init();
 });
 	</script>
 </html>
