--- a/src/main/html/five-in-a-row-hex.html
+++ b/src/main/html/five-in-a-row-hex.html
@@ -105,17 +105,17 @@ Promise.resolve({})
 
 	let viewCell = rd.parse(`
 		<div class='hex' style='filter___: { vm.selected ? "brightness(80%)" : "brightness(100%)" };' rd_on_click='handleclick(vm, ev)'>
-			<div class='part' style='border-bottom: 15px solid { vm.selected ? palette[2] : "#DDDDDD" };'></div>
-			<div class='middle' style='background: { vm.selected ? palette[2] : "#DDDDDD" }'>
+			<div class='part' style='border-bottom: 15px solid { vm.selected ? env.palette[2] : "#DDDDDD" };'></div>
+			<div class='middle' style='background: { vm.selected ? env.palette[2] : "#DDDDDD" }'>
 				<span draggable='true' style='left: 50%; position: absolute; top: 50%; transform: translate(-50%, -50%);'>
 					<rd_map v='vm.d'>
-						<rd_if v='vm != null'>{ icons[vm] }</rd_if>
+						<rd_if v='vm != null'>{ env.icons[vm] }</rd_if>
 					</rd_map>
 				</span>
 			</div>
-			<div class='part' style='border-top: 15px solid { vm.selected ? palette[2] : "#DDDDDD" };'></div>
+			<div class='part' style='border-top: 15px solid { vm.selected ? env.palette[2] : "#DDDDDD" };'></div>
 		</div>
-	`, {});
+	`, { ...fiveinarow, });
 
 	let viewCells = rd.parse(`
 		<div class='hex-row' style='margin-left: { vm[0].x * 26.5 + vm[0].y * 53 }px'>
@@ -123,7 +123,7 @@ Promise.resolve({})
 				<rd_component v='env.viewCell' />
 			</rd_for>
 		</div>
-	`, { viewCell, });
+	`, { ...fiveinarow, viewCell, });
 
 	let view = rd.parse(`
 		<span style='display: flex; flex-direction: column;'>
@@ -133,7 +133,7 @@ Promise.resolve({})
 						<rd_component v='env.viewCells' />
 					</rd_map>
 				</span>
-				<span style='color: { palette[4] }; font-family: Oswald, monospace; margin-right: 16px;'>{ vm.score }</span>
+				<span style='color: { env.palette[4] }; font-family: Oswald, monospace; margin-right: 16px;'>{ vm.score }</span>
 			</span>
 			<span>
 				<img height='64' />
@@ -149,7 +149,7 @@ Promise.resolve({})
 			<rd_map v='vm.notification'>
 				<rd_if v='vm'>
 					<div style='
-						background: { palette[vm.c] };
+						background: { env.palette[vm.c] };
 						bottom: 0;
 						font-family: Oswald, monospace;
 						left: 0;
@@ -161,16 +161,14 @@ Promise.resolve({})
 				</rd_if>
 			</rd_map>
 		</span>
-	`, { viewCells, });
+	`, { ...fiveinarow, viewCells, });
 
-	let five = fiveinarow(cc, view);
+	let game = fiveinarow.game(cc, view);
 
-	globalThis.handleclick = five.handleclick;
-	globalThis.handleclose = five.handleclose;
-	globalThis.icons = five.icons;
-	globalThis.palette = five.palette;
+	globalThis.handleclick = game.handleclick;
+	globalThis.handleclose = game.handleclose;
 
-	five.vw.init();
+	game.vw.init();
 });
 	</script>
 </html>
