--- a/src/main/html/five-in-a-row-triangle.html
+++ b/src/main/html/five-in-a-row-triangle.html
@@ -25,9 +25,7 @@ Promise.resolve({})
 .then(ns => evalscript('fun.js').then(fun => ({ ...ns, fun, })))
 .then(ns => evalscript('render.js').then(render => ({ ...ns, render, })))
 .then(ns => {
-	let { fiveinarow, fun, render, } = ns;
-	let { rand, range, } = fun;
-	let { rd, renderAgain, } = render;
+	let { fiveinarow, fun: { rand, range, }, render: { rd, renderAgain, }, } = ns;
 
     let view = rd.parse(`
         <span style='display: flex; flex-direction:column; font-size: 36px;'>
