--- a/src/main/html/render.html
+++ b/src/main/html/render.html
@@ -14,147 +14,149 @@ file:///home/ywsing/suite/src/main/html/render.html
 	<script type='text/javascript'>
 'use strict';
 
-Promise.resolve(true)
-.then(() => evalscriptglobal('fun.js'))
-.then(() => evalscriptglobal('render.js'))
-.then(() => {
-let view0 = rd.parse(`
-	<span style='font-family: sans-serif;'>
-		<font face='Monospac821 BT, Monaco, Consolas'>
-			<form name='login'>
-				Username <input id='username' rd_on_input='vm.username = ev.target.value' value='{ vm.username }' type='text' autofocus='autofocus' /><br />
-				Password <input id='password' rd_on_input='vm.password = ev.target.value' value='{ vm.password }' type='password' /><br />
-				<input type='button' value='Login' rd_on_click='login(vm)' /><br />
-				token: { vm.token }
-			</form>
-		</font>
+Promise.resolve({})
+.then(ns => evalscript('fun.js').then(fun => ({ ...ns, fun, })))
+.then(ns => evalscript('render.js').then(render => ({ ...ns, render, })))
+.then(ns => {
+	let { fiveinarow, fun: { lens, read, }, render: { rd, renderAgain, }, } = ns;
 
-		<rd_map v='vm.message'>
-			<p style='font-weight: bold;'>
-				{ vm } within scope
-				<!-- comment -->
-			</p>
-		</rd_map>
-		<rd_map v='vm.t'>
-			{ vm }
-		</rd_map>
-		<ul>
-			<rd_for v='vm.fruits'><li>{ vm }</li></rd_for>
-		</ul>
-		<div>
-			<!--rd_map v='vm.sse'>server sent events: <rd_for>{ vm }</rd_for></rd_map-->
-		</div>
-		<button rd_on_click='closer()'>Close</button>
-	</span>
-`);
+	let view0 = rd.parse(`
+		<span style='font-family: sans-serif;'>
+			<font face='Monospac821 BT, Monaco, Consolas'>
+				<form name='login'>
+					Username <input id='username' rd_on_input='vm.username = ev.target.value' value='{ vm.username }' type='text' autofocus='autofocus' /><br />
+					Password <input id='password' rd_on_input='vm.password = ev.target.value' value='{ vm.password }' type='password' /><br />
+					<input type='button' value='Login' rd_on_click='login(vm)' /><br />
+					token: { vm.token }
+				</form>
+			</font>
 
-let view1 = rd.span().children(
-	rd.map(vm => vm.message,
-		rd.p().style({ 'font-weight': 'bold', }).text().rd()
-	),
-	rd.map(vm => vm.t,
-		rd.p().text().rd()
-	),
-	rd.map(vm => vm.fruits,
-		rd.ul().child(rd.for(vm => vm, rd.li().text().rd())).rd()
-	),
-	rd.tag('button').child(rd.dom(vm => document.createTextNode('Close'))).listen('click', (vm, ev) => close()).rd(),
-).rd();
+			<rd_map v='vm.message'>
+				<p style='font-weight: bold;'>
+					{ vm } within scope
+					<!-- comment -->
+				</p>
+			</rd_map>
+			<rd_map v='vm.t'>
+				{ vm }
+			</rd_map>
+			<ul>
+				<rd_for v='vm.fruits'><li>{ vm }</li></rd_for>
+			</ul>
+			<div>
+				<!--rd_map v='vm.sse'>server sent events: <rd_for>{ vm }</rd_for></rd_map-->
+			</div>
+			<button rd_on_click='closer()'>Close</button>
+		</span>
+	`);
 
-let view = rd
-	.span()
-	.style({ 'font-family': 'sans-serif', })
-	.child(
-		rd.list([
-			view0,
-			view1,
-			rd.p().rd(),
-			rd.map(vm => vm.vscroll, rd
-				.vscrollf(200, 32,
-					rd.dom(vm => document.createTextNode('item ' + vm)),
-					start1 => renderAgain(view, lens.key('vscroll').key('start').apply(start0 => start1)),
-				)
-				.style({ width: '400px', })
-				.rd()
-			),
-		]),
-	)
-	.rd();
+	let view1 = rd.span().children(
+		rd.map(vm => vm.message,
+			rd.p().style({ 'font-weight': 'bold', }).text().rd()
+		),
+		rd.map(vm => vm.t,
+			rd.p().text().rd()
+		),
+		rd.map(vm => vm.fruits,
+			rd.ul().child(rd.for(vm => vm, rd.li().text().rd())).rd()
+		),
+		rd.tag('button').child(rd.dom(vm => document.createTextNode('Close'))).listen('click', (vm, ev) => close()).rd(),
+	).rd();
 
-let fetchBase = { cache: 'no-cache', credentials: 'omit', redirect: 'follow', referrer: 'no-referrer', };
+	let view = rd
+		.span()
+		.style({ 'font-family': 'sans-serif', })
+		.child(
+			rd.list([
+				view0,
+				view1,
+				rd.p().rd(),
+				rd.map(vm => vm.vscroll, rd
+					.vscrollf(200, 32,
+						rd.dom(vm => document.createTextNode('item ' + vm)),
+						start1 => renderAgain(view, lens.key('vscroll').key('start').apply(start0 => start1)),
+					)
+					.style({ width: '400px', })
+					.rd()
+				),
+			]),
+		)
+		.rd();
 
-let login = vm => {
-	console.log('login()');
-	let { username, password, } = vm;
+	let fetchBase = { cache: 'no-cache', credentials: 'omit', redirect: 'follow', referrer: 'no-referrer', };
 
-	fetch('../token', {
-		...fetchBase,
-		mode: 'no-cors',
-		body: JSON.stringify({ username, password, }),
-		headers: { 'Content-Type': 'application/json', },
-		method: 'POST',
-	})
-	.then(response => {
-		if (response.ok) return response.json(); else throw response.statusText;
-	})
-	.then(json => json.token)
-	.then(token => fetch('../token', {
-		...fetchBase,
-		headers: { 'Authorization': token, },
-		method: 'PATCH',
-	}))
-	.then(response => {
-		if (response.ok) return response.json(); else throw response.statusText;
-	})
-	.then(json => json.token)
-	.then(token => { renderAgain(view, vm => ({ ...vm, token, })); return token; })
-	.then(token => fetch('../api', {
-		...fetchBase,
-		headers: { 'Authorization': token, },
-		method: 'GET',
-	}))
-	.then(response => {
-		if (response.ok) return response.text(); else throw response.statusText;
-	})
-	.then(message => {
-		renderAgain(view, vm => ({ ...vm, message, }));
-		console.log('login() = ', message);
-	})
-	.catch(error => {
-		console.error('login()', error);
-		renderAgain(view, vm => ({ ...vm, token: error, }));
-	});
-};
+	let login = vm => {
+		console.log('login()');
+		let { username, password, } = vm;
 
-let sse = [];
-let t = 0;
-let vscroll = { start: 0, vms: read().range(0, 256).list(), };
+		fetch('../token', {
+			...fetchBase,
+			mode: 'no-cors',
+			body: JSON.stringify({ username, password, }),
+			headers: { 'Content-Type': 'application/json', },
+			method: 'POST',
+		})
+		.then(response => {
+			if (response.ok) return response.json(); else throw response.statusText;
+		})
+		.then(json => json.token)
+		.then(token => fetch('../token', {
+			...fetchBase,
+			headers: { 'Authorization': token, },
+			method: 'PATCH',
+		}))
+		.then(response => {
+			if (response.ok) return response.json(); else throw response.statusText;
+		})
+		.then(json => json.token)
+		.then(token => { renderAgain(view, vm => ({ ...vm, token, })); return token; })
+		.then(token => fetch('../api', {
+			...fetchBase,
+			headers: { 'Authorization': token, },
+			method: 'GET',
+		}))
+		.then(response => {
+			if (response.ok) return response.text(); else throw response.statusText;
+		})
+		.then(message => {
+			renderAgain(view, vm => ({ ...vm, message, }));
+			console.log('login() = ', message);
+		})
+		.catch(error => {
+			console.error('login()', error);
+			renderAgain(view, vm => ({ ...vm, token: error, }));
+		});
+	};
 
-let upd0 = lens.key('t').apply(t => t + 1);
-let upd1 = lens.key('vscroll').key('vms').index(3).apply(vm => Math.random().toString());
+	let sse = [];
+	let t = 0;
+	let vscroll = { start: 0, vms: read().range(0, 256).list(), };
 
-let interval0 = setInterval(() => renderAgain(view, upd0), 1000);
-let interval1 = setInterval(() => renderAgain(view, upd1), 3000);
+	let upd0 = lens.key('t').apply(t => t + 1);
+	let upd1 = lens.key('vscroll').key('vms').index(3).apply(vm => Math.random().toString());
 
-renderAgain(view, vm => ({ ...vm, username: '', password: '' }));
-renderAgain(view, vm => ({ ...vm, sse, t, vscroll, message: 'hello world0', fruits: ['banana',], }));
-renderAgain(view, vm => ({ ...vm, sse, t, vscroll, message: 'hello world1', fruits: ['apple', 'banana',], }));
-renderAgain(view, vm => ({ ...vm, sse, t, vscroll, message: 'hello world2', fruits: ['apple', 'orange', 'orange', 'banana',], }));
-renderAgain(view, vm => ({ ...vm, sse, t, vscroll, message: 'hello world~', fruits: ['banana', 'orange',], }));
+	let interval0 = setInterval(() => renderAgain(view, upd0), 1000);
+	let interval1 = setInterval(() => renderAgain(view, upd1), 3000);
 
-globalThis.close = () => {
-	clearInterval(interval0);
-	clearInterval(interval1);
-	renderAgain(view, vm => null);
-};
+	renderAgain(view, vm => ({ ...vm, username: '', password: '' }));
+	renderAgain(view, vm => ({ ...vm, sse, t, vscroll, message: 'hello world0', fruits: ['banana',], }));
+	renderAgain(view, vm => ({ ...vm, sse, t, vscroll, message: 'hello world1', fruits: ['apple', 'banana',], }));
+	renderAgain(view, vm => ({ ...vm, sse, t, vscroll, message: 'hello world2', fruits: ['apple', 'orange', 'orange', 'banana',], }));
+	renderAgain(view, vm => ({ ...vm, sse, t, vscroll, message: 'hello world~', fruits: ['banana', 'orange',], }));
 
-let eventSource = new EventSource('/sse');
+	globalThis.closer = () => {
+		clearInterval(interval0);
+		clearInterval(interval1);
+		renderAgain(view, vm => null);
+	};
 
-eventSource.onError = error => console.log(error);
-eventSource.onMessage = event => console.log(event);
+	let eventSource = new EventSource('/sse');
 
-eventSource.addEventListener("close", ev => eventSource.close());
-eventSource.addEventListener("number", ev => renderAgain(view, vm => ({ ...vm, sse: [...vm.sse, JSON.parse(ev.data).i,], })));
+	eventSource.onError = error => console.log(error);
+	eventSource.onMessage = event => console.log(event);
+
+	eventSource.addEventListener("close", ev => eventSource.close());
+	eventSource.addEventListener("number", ev => renderAgain(view, vm => ({ ...vm, sse: [...vm.sse, JSON.parse(ev.data).i,], })));
 });
 
 	</script>
