--- a/src/main/html/five-in-a-row-triangle.html
+++ b/src/main/html/five-in-a-row-triangle.html
@@ -14,19 +14,16 @@ file:///home/ywsing/suite/src/main/html/five-in-a-row-triangle.html
 	</body>
 
 	<script src='eval-script.js'></script>
-	<script src='frp.js'></script>
-	<script src='pq.js'></script>
 
 	<script type='text/javascript'>
 'use strict';
 
-Promise.resolve({})
+Promise
+.all(['frp.js', 'pq.js',].map(loadsrcscript))
 .then(ns => evalscript('five-in-a-row.js').then(fiveinarow => ({ ...ns, fiveinarow, })))
 .then(ns => evalscript('fun.js').then(fun => ({ ...ns, fun, })))
 .then(ns => evalscript('render.js').then(render => ({ ...ns, render, })))
-.then(ns => {
-	let { fiveinarow, fun: { rand, range, }, render: { rd, renderAgain, }, } = ns;
-
+.then(({ fiveinarow, fun: { rand, range, }, render: { rd, renderAgain, }, }) => {
     let view = rd.parse(`
         <span style='display: flex; flex-direction:column; font-size: 36px;'>
             <rd_map v='vm.board'>
