--- a/src/main/html/block-fill.html
+++ b/src/main/html/block-fill.html
@@ -46,16 +46,14 @@ Promise.resolve({})
 	let handledragstart = (vm, ev) => dragsource = vm;
 
 	let viewCell = rd.parse(`
-		<div draggable='true'
-			style='
-				background: { vm.d ? "#888888" : "#DDDDDD" };
-				display: table-cell;
-				font-size: 32px;
-				height: 50px;
-				text-align: center;
-				vertical-align: middle;
-				width: 50px;
-			'
+		<div draggable='true' style='
+			background: { vm.d ? "#888888" : "#DDDDDD" };
+			display: inline-block;
+			font-size: 32px;
+			height: 50px;
+			text-align: center;
+			vertical-align: middle;
+			width: 50px;'
 			rd_on_click='handleclick(vm, ev)'
 			rd_on_dragend='handledragend(vm, ev)'
 			rd_on_dragenter='handledragenter(vm, ev)'
