--- a/src/main/html/block-fill.html
+++ b/src/main/html/block-fill.html
@@ -14,9 +14,9 @@ file:///home/ywsing/suite/src/main/html/block-fill.html
 'use strict';
 
 Promise.resolve({})
-.then(ns => evalscript('frp.js').then(frp => ({ ...ns, frp, })))
-.then(ns => evalscript('fun.js').then(fun => ({ ...ns, fun, })))
-.then(ns => evalscript('render.js').then(render => ({ ...ns, render, })))
+.then(ns => evalscript('frp.js').then(m => ({ ...ns, frp: m, })))
+.then(ns => evalscript('fun.js').then(m => ({ ...ns, fun: m, })))
+.then(ns => evalscript('render.js').then(m => ({ ...ns, render: m, })))
 .then(ns => {
 	let { frp, fun: { range, }, render: { rd, renderAgain, }, } = ns;
 
