--- a/src/main/html/five-in-a-row-hex-rects.html
+++ b/src/main/html/five-in-a-row-hex-rects.html
@@ -30,9 +30,9 @@ let nStoneTypes = colorsp != null ? +colorsp : 5;
 
 Promise
 .all(['frp.js', 'pq.js',].map(loadsrcscript))
-.then(ns => evalscript('five-in-a-row.js').then(fiveinarow => ({ ...ns, fiveinarow, })))
-.then(ns => evalscript('fun.js').then(fun => ({ ...ns, fun, })))
-.then(ns => evalscript('render.js').then(render => ({ ...ns, render, })))
+.then(ns => evalscript('five-in-a-row.js').then(m => ({ ...ns, fiveinarow: m, })))
+.then(ns => evalscript('fun.js').then(m => ({ ...ns, fun: m, })))
+.then(ns => evalscript('render.js').then(m => ({ ...ns, render: m, })))
 .then(({ fiveinarow, fun: { rand, range, }, render: { rd, renderAgain, }, }) => {
 	let cc = ((sizex, sizey) => {
 		let startx = 0, endx = startx + sizex;
