--- a/src/main/html/five-in-a-row-triangle.html
+++ b/src/main/html/five-in-a-row-triangle.html
@@ -20,9 +20,9 @@ file:///home/ywsing/suite/src/main/html/five-in-a-row-triangle.html
 
 Promise
 .all(['frp.js', 'pq.js',].map(loadsrcscript))
-.then(ns => evalscript('five-in-a-row.js').then(fiveinarow => ({ ...ns, fiveinarow, })))
-.then(ns => evalscript('fun.js').then(fun => ({ ...ns, fun, })))
-.then(ns => evalscript('render.js').then(render => ({ ...ns, render, })))
+.then(ns => evalscript('five-in-a-row.js').then(m => ({ ...ns, fiveinarow: m, })))
+.then(ns => evalscript('fun.js').then(m => ({ ...ns, fun: m, })))
+.then(ns => evalscript('render.js').then(m => ({ ...ns, render: m, })))
 .then(({ fiveinarow, fun: { rand, range, }, render: { rd, renderAgain, }, }) => {
     let view = rd.parse(`
         <span style='display: flex; flex-direction:column; font-size: 36px;'>
