--- a/src/main/html/render.html
+++ b/src/main/html/render.html
@@ -46,6 +46,35 @@ Promise.resolve({})
 			<div>
 				<!--rd_map v='vm.sse'>server sent events: <rd_for>{ vm }</rd_for></rd_map-->
 			</div>
+			<div style='
+				background-color: rgb(0, 0, 0);
+				background-color: rgb(0, 0, 0, 0.4);
+				display: { vm.isPopup ? "block" : "none" };
+				height: 100%;
+				left: 0;
+				overflow: auto;
+				position: fixed;
+				top: 0;
+				width: 100%;
+				z-index: 1;'>
+				<div style='
+					background-color: #FEFEFE;
+					border: 1px solid #888;
+					margin: 15% auto;
+					padding: 20px;
+					width: 50%;'>
+					<span rd_on_click='messager(false)'
+						style='
+						cursor: pointer;
+						font-size: 28px;
+						float: right;'>
+						×
+					</span>
+					<p>Climb every mountain</p>
+					<p>Another</p>
+				</div>
+			</div>
+			<button rd_on_click='messager(true)'>Message</button>
 			<button rd_on_click='closer()'>Close</button>
 		</span>
 	`);
@@ -149,6 +178,8 @@ Promise.resolve({})
 		clearInterval(interval1);
 		renderAgain(view, vm => null);
 	};
+
+	globalThis.messager = b => renderAgain(view, vm => ({ ...vm, isPopup: b }));
 
 	let eventSource = new EventSource('/sse');
 
