--- a/src/main/html/render.html
+++ b/src/main/html/render.html
@@ -22,9 +22,8 @@ Promise.resolve({})
 
 	let fetchBase = { cache: 'no-cache', credentials: 'omit', redirect: 'follow', referrer: 'no-referrer', };
 
-	let login = vm => {
+	let login = ({ username, password, }) => {
 		console.log('login()');
-		let { username, password, } = vm;
 
 		return fetch('../token', {
 			...fetchBase,
@@ -65,30 +64,35 @@ Promise.resolve({})
 		});
 	};
 
-	let vmLogin = { username: '', password: '', };
-	let setUsername = username => renderAgain(view, vm => ({ ...vm, login: { ...vm.login, username, }, }));
-	let setPassword = password => renderAgain(view, vm => ({ ...vm, login: { ...vm.login, password, }, }));
-	let handleLogin = () => renderAgain(view, vm => {
-		login(vm.login);
-		return { ...vm, login: { username: '', password: '', }, };
-	});
+	let view;
 
-	let viewLogin = rd.parse(`
-		<font face='Monospac821 BT, Monaco, Consolas'>
-			<form name='login'>
-				Username <input rd_on_input='env.setUsername(ev.target.value)' value='{ vm.username }' type='text' autofocus='autofocus' /><br />
-				Password <input rd_on_input='env.setPassword(ev.target.value)' value='{ vm.password }' type='password' /><br />
-				<input type='button' value='Login' rd_on_click='env.handleLogin()' /><br />
-				token: { vm.token }
-			</form>
-		</font>
-	`, { setUsername, setPassword, handleLogin, });
+	let componentLogin = (path => {
+		let lens_ = lens.key(path);
+		let change = f => renderAgain(view, lens_.apply(f));
+
+		let view_ = rd.parse(`
+			<rd_map v='vm.${path}'>
+				<font face='Monospac821 BT, Monaco, Consolas'>
+					<form name='login'>
+						Username <input rd_on_input='env.setUsername(ev.target.value)' value='{ vm.username }' type='text' autofocus='autofocus' /><br />
+						Password <input rd_on_input='env.setPassword(ev.target.value)' value='{ vm.password }' type='password' /><br />
+						<input type='button' value='Login' rd_on_click='env.handleLogin()' /><br />
+						token: { vm.token }
+					</form>
+				</font>
+			</rd_map>
+		`, {
+			setUsername: username => change(vm => ({ ...vm, username, })),
+			setPassword: password => change(vm => ({ ...vm, password, })),
+			handleLogin: () => change(vm => { login(vm); return { username: '', password: '', }; }),
+		});
+
+		return { initvm: { username: '', password: '', }, view: view_, };
+	})('login');
 
 	let view0 = rd.parse(`
 		<span style='font-family: sans-serif;'>
-			<rd_map v='vm.login'>
-				<rd_component v='env.viewLogin' />
-			</rd_map>
+			<rd_component v='env.viewLogin' />
 
 			<rd_map v='vm.message'>
 				<p style='font-weight: bold;'>
@@ -136,7 +140,7 @@ Promise.resolve({})
 			<button rd_on_click='messager(true)'>Message</button>
 			<button rd_on_click='closer()'>Close</button>
 		</span>
-	`, { viewLogin });
+	`, { viewLogin: componentLogin.view, });
 
 	let view1 = rd.span().children(
 		rd.map(vm => vm.message,
@@ -151,7 +155,7 @@ Promise.resolve({})
 		rd.tag('button').child(rd.dom(vm => document.createTextNode('Close'))).listen('click', ev => close()).rd(),
 	).rd();
 
-	let view = rd
+	view = rd
 		.span()
 		.style({ 'font-family': 'sans-serif', })
 		.child(
@@ -181,7 +185,7 @@ Promise.resolve({})
 	let interval0 = setInterval(() => renderAgain(view, upd0), 1000);
 	let interval1 = setInterval(() => renderAgain(view, upd1), 3000);
 
-	renderAgain(view, vm => ({ ...vm, login: vmLogin, }));
+	renderAgain(view, vm => ({ ...vm, login: componentLogin.initvm, }));
 	renderAgain(view, vm => ({ ...vm, sse, t, vscroll, message: 'hello world0', fruits: ['banana',], }));
 	renderAgain(view, vm => ({ ...vm, sse, t, vscroll, message: 'hello world1', fruits: ['apple', 'banana',], }));
 	renderAgain(view, vm => ({ ...vm, sse, t, vscroll, message: 'hello world2', fruits: ['apple', 'orange', 'orange', 'banana',], }));
